--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "typescript": "^2.9.2",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8"
+  },
+  "dependencies": {
+    "@types/node": "^10.5.2",
+    "http": "0.0.0"
   }
 }
