--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "node dist/bundle.js"
+    "start": "webpack; node dist/bundle.js"
   },
   "repository": {
     "type": "git",
