--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "@types/node": "^10.5.2",
-    "http": "0.0.0"
+    "http": "0.0.0",
+    "mongodb": "^3.1.1",
+    "onoff": "^3.2.1"
   }
 }
